fixed search bar not showing up

--- a/public/style.css
+++ b/public/style.css
@@ -24,7 +24,7 @@ body {
 	--custom-card-header: #2C394B;
 	--custom-card-body: #334756;
 	--custom-card-text: #FF4C29;
-	--custom-card-text-colored: #FF4C29;
+	--custom-card-text-colored: #EEEEEE;
 	/* --custom-card-header: #2C394B;
 	--custom-card-body: #334756;
 	--custom-card-text: #fff;
